# gdfunc

./: .gitignore  LANGSPECS.md  LICENSE  MIGRATION_GUIDE.md  Main.hs  Makefile  README copy.md  README.md  Repl.hs  build.sh  cabal.project  flake.nix  gdfunc.cabal  run-factorial.sh  start-web-server.sh  test.sh
compiler/: GDFunc-compiler.cabal  README.md
compiler/.golden/factorial-c/: golden
compiler/app/: Main.hs
compiler/examples/: factorial.gdfunc  linear_default.gdfunc
compiler/src/GDFunc/: CodeGen.hs  Parser.hs  Parser2.hs  Pretty.hs  Scanner.hs  SrcSpan.hs  TypeChecker.hs
compiler/src/GDFunc/CodeGen/: C.hs  GDScript.hs
compiler/src/GDFunc/Parser2/: Stream.hs
compiler/src/GDFunc/TypeChecker/: Borrow.hs
compiler/test/GDFunc/: BorrowSpec.hs  CodeGenSpec.hs  GoldenSpec.hs  IntegrationSpec.hs  Parser2Spec.hs  ParserSpec.hs  PrettySpec.hs  ScannerSpec.hs  TypeCheckerSpec.hs  WebServerSpec.hs.disabled
examples/: borrowing_example.gdfunc  linear_default.gdfunc  quicksort_linear.gdfunc  shared_types.gdfunc
src/GDFunc/: CodeGen.hs  Parser.hs  Pretty.hs  Scanner.hs  TypeChecker.hs  WebServer.hs
static/: style.css
test/GDFunc/: ParserSpec.hs  PrettySpec.hs  ScannerSpec.hs  TypeCheckerSpec.hs
web/: GDFunc-web.cabal  README.md
web/app/: WebServer.hs
web/src/GDFunc/: WebServer.hs
web/static/: app.js  index.html
